--- a/ShortURL/httpd.conf
+++ b/ShortURL/httpd.conf
@@ -237,7 +237,7 @@ ServerName localhost:80
 # explicitly permit access to web content directories in other 
 # <Directory> blocks below.
 #
-<Directory ${SRVROOT}/htdocs/test>
+<Directory ${SRVROOT}/htdocs/ShortURL>
     AllowOverride All
     Require all granted
 </Directory>
@@ -254,8 +254,8 @@ ServerName localhost:80
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "${SRVROOT}/htdocs/test"
-<Directory "${SRVROOT}/htdocs/test">
+DocumentRoot "${SRVROOT}/htdocs/ShortURL"
+<Directory "${SRVROOT}/htdocs/ShortURL">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
